Commit al master del blogpost en su version mas reciente

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@ body {
 	text-align: center;
 }
 
+header {
+	background-color: lightgray;
+	color: black;
+	text-align: center;
+	margin: 2em;
+}
+
 h2 {
 	color: orange;
+}
+
+.container {
+	width: 70%;
+	margin: 0 auto;
+	margin: 2em;
+	text-align: left;
 }
