--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
 header {
 	background-color: #287233;
-	color: width;
+	color: orange;
 	font-weight: bold;
 	text-align: center;
 	padding: 2em;
